fix clipped text for discopane header (bug 638547)

--- a/media/css/zamboni/discovery-pane.css
+++ b/media/css/zamboni/discovery-pane.css
@@ -162,7 +162,7 @@ header:after,
 
 #intro p {
     position: relative;
-    padding-right: 120px;
+    padding-right: 140px;
 }
 
 .html-rtl #intro p {
